--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>İkinci El Project</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
